overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body, html {
   font-family: sans-serif;
-  overflow: hidden;
   margin: 0;
   padding: 0;
 }
